// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers createRequestMessage one argument 1`] = `
Object {
  "functionName": "functionName",
  "id": "id",
  "params": Array [
    "param1",
  ],
}
`;

exports[`helpers createRequestMessage two arguments 1`] = `
Object {
  "functionName": "functionName",
  "id": "id",
  "params": Array [
    "param1",
    Object {},
  ],
}
`;

exports[`helpers createResponseMessage empty 1`] = `
Object {
  "data": undefined,
  "error": undefined,
  "functionName": "functionName",
  "id": "id",
}
`;

exports[`helpers createResponseMessage with data 1`] = `
Object {
  "data": "data",
  "error": undefined,
  "functionName": "functionName",
  "id": "id",
}
`;

exports[`helpers createResponseMessage with error 1`] = `
Object {
  "data": null,
  "error": "error message",
  "functionName": "functionName",
  "id": "id",
}
`;
